--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+    'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+* {
+  margin: 0;
+  padding: 0;
+}
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+main {
+  overflow-x: hidden;
+}
+.inner {
+  max-width: 1440px;
+  margin: 0 auto;
+  position: relative;
+  padding: clamp(7vw, 3vw, 10vw) clamp(10px, 3vw, 40px);
+  box-sizing: border-box;
+}
+.sec-title {
+  font-size: clamp(20px, 3vw, 30px);
+  margin-bottom: 10px;
+}
+p {
+  font-size: clamp(14px, 2vw, 16px);
+  word-break: keep-all;
+}
+img {
+  width: 100%;
+  height: 100%;
 }
